# rayclicker

./: CMakeLists.txt  LICENSE  README.md
src/: game.c  game.h  main.c  result.h  ui.c  ui.h
